remove address PUT endpoint
