# routes/address.go
@@ -47,21 +47,6 @@ func (h *AddressRoutes) CreateAddress(w http.ResponseWriter, r *http.Request) {
 	u.RespondWithJSON(w, http.StatusCreated, address)
 }
 
-func (h *AddressRoutes) UpdateAddress(w http.ResponseWriter, r *http.Request) {
-	var address types.Address
-	if err := json.NewDecoder(r.Body).Decode(&address); err != nil {
-		u.RespondWithError(w, r, http.StatusBadRequest, "error decoding request payload")
-		return
-	}
-
-	if err := h.userService.UpdateAddress(r.Context(), &address); err != nil {
-		u.RespondWithError(w, r, http.StatusInternalServerError, err.Error())
-		return
-	}
-
-	u.RespondWithJSON(w, http.StatusOK, address)
-}
-
 func (h *AddressRoutes) RemoveAddress(w http.ResponseWriter, r *http.Request) {
 	addressID := mux.Vars(r)["id"]
 	if err := h.userService.RemoveAddress(r.Context(), addressID); err != nil {
@@ -74,7 +59,6 @@ func (h *AddressRoutes) RemoveAddress(w http.ResponseWriter, r *http.Request) {
 
 func (h *AddressRoutes) RegisterRoutes() {
 	h.muxRouter.Handle("/addresses", h.secure(h.CreateAddress)).Methods(http.MethodPost)
-	h.muxRouter.Handle("/addresses", h.secure(h.UpdateAddress)).Methods(http.MethodPut)
 	h.muxRouter.Handle("/addresses", h.secure(h.GetAddresses)).Methods(http.MethodGet)
 	h.muxRouter.Handle("/addresses/{id}", h.secure(h.RemoveAddress)).Methods(http.MethodDelete)
 }
